# translations-checker

./: .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md  install.sh  run_translations_checker.sh
examples/: file1.tsx  file2.tsx  file3.tsx  fr.json  main.tsx
src/: main.rs
