[package]
name = "translation_checker"
version = "0.1.9"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
fancy-regex = "0.13.0"
indexmap = { version = "2.6.0", features = ["serde"] }
once_cell = "1.20.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
